manifests/10-readiness-probe.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: php-deployment
  namespace: pro2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: php
  template:
    metadata:
      labels:
        app: php
    spec:
      containers:
      - image: localhost/php-crud-app:v1
        imagePullPolicy: IfNotPresent
        name: php
        ports:
        - containerPort: 80
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
          timeoutSeconds: 2
          failureThreshold: 3
