manifests/09-ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: php-ingress
  namespace: pro2
spec:
  ingressClassName: nginx
  rules:
    - host: crud.local
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: php-service
              port:
                number: 80
